# convfinqa

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  REPORT.md  TASK.md  dataset.md  pyproject.toml  skills-lock.json
docs/: decisions.md  model_selection.md
runs/2026-05-04T06-35-00Z/: failures.md  predictions.jsonl  summary.json
runs/2026-05-04T06-50-41Z/: failures.md  predictions.jsonl  summary.json  transcripts.md
runs/2026-05-04T09-03-38Z/: failures.md  predictions.jsonl  summary.json  transcripts.md
runs/2026-05-04T12-48-44Z/: failures.md  predictions.jsonl  summary.json
runs/2026-05-04T13-10-30Z/: failures.md  predictions.jsonl  summary.json  transcripts.md
src/: logger.py  main.py  settings.py
src/cli/: chat.py  dump_failures.py  eval.py  inspect.py  main.py  scripts.py
src/domain/: __init__.py  answer.py  conversation.py  convfinqa.py
src/eval/: __init__.py  breakdowns.py  metrics.py
src/prompts/: render.py  system.py
src/repository/: __init__.py  convfinqa.py
src/services/: answer_service.py  answerer.py  anthropic.py  evaluation_service.py  evaluator.py  llm_client.py  transcripts.py
src/tools/: calculator.py  submit_answer.py
tests/: conftest.py  test_answer_service.py  test_answerer.py  test_anthropic.py  test_breakdowns.py  test_calculator.py  test_metrics.py  test_renderer.py  test_submit_answer.py
tests/repository/: test_convfinqa.py  test_dataset_quality.py
